js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenJsModules/js-module-b.mjs
export function externalDemoFunction() { return 1; }